Fix alignment of image upload in admin

--- a/admin/Content/css/nui-file-upload.css
+++ b/admin/Content/css/nui-file-upload.css
@@ -6,7 +6,7 @@
     width: 100%;
     max-width: 680px; /* 800 */
     text-align: center;
-    margin: 0 auto;
+    margin: 0 20px;
 }
 
 .nui-upload-container h1
